Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.19alpha26 :
    
        - Fixed PCL5 parser according to the sources of rastertohp.
        
        - Fixed number of copies handling in PCL5 parser : the number
          of copies could vary from page to page.
        
    - 1.19alpha25 :
    
        - Added new "description" field to printers in both
          PostgreSQL and LDAP. No code to handle this yet.
          
        - Reversed the fix for power save mode in printers :  
          no paper or tray open would have caused people to
          be undercharged.
          
        - Preliminary version of MySQL initialization script.
          
    - 1.19alpha24 :
    
        - Native PDF parsing code now works perfectly with
          Python 2.1 and above, and is way faster than before.
          GhostScript is not used anymore to convert PDF to PS,
          because PDF is parsed directly.
          
    - 1.19alpha23 :
    
        - Fixed waitprinter.sh wrt PowerSave mode and some
          printers. Thanks to Ryan Suarez.
        
        - Smart PDL analyzer now recognizes PDF too : two
          PDF parsing methods are used : a native one which
          is very fast but requires Python 2.3 or above, and
          a slower one which uses Ghostscript. PyKota detects
          automatically which method to use depending on your
          version of Python.
        
        - All tracebacks now include PyKota's version number.
          
    - 1.19alpha22 :
    
        - Ensures that the file pointer for job's data is 
          reset to the start of the job's datas after the
          job's size pre-computation phase.
          
        - Improved PostScript detection code for bad drivers
          which don't correctly switch languages between PJL
          and PS.
       
        - Even better debugging code.
        
    - 1.19alpha21 :